# kingmed-scraper

./: README.md  main.py  scraper.sh
downloader/: downloader.py
poetry-kingmed/: pyproject.toml
scrapers/: dl.py  scraper.py  section.py
