[tool.poetry]
name = "poetry-kingmed"
version = "0.1.0"
description = ""
authors = ["Harutyun <106912298+HarutyunAg@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
lxml = "^5.1.0"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
